k8s/client-api/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client-api
  template:
    metadata:
      labels:
        app: client-api
    spec:
      containers:
      - name: client-api
        image: registry.digitalocean.com/client-api/client-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3999
        resources:
          limits:
            cpu: "2000m"
            memory: "512Mi"
          requests:
            cpu: "1000m"
            memory: "256Mi"
