k8s/client-api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-api
spec:
  type: ClusterIP
  selector:
    app: client-api
  ports:
    - protocol: TCP
      port: 3999
      targetPort: 3999
