k8s/client-api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: local.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-api
            port:
              number: 3999
